# cecs449-final-project

./: .gitignore  AI_USAGE.md  CMakeLists.txt  vcpkg.json
include/: AssimpImport.h  Mesh.h  SceneObject.h
models/boat/: boat.fbx
models/garden/Campsite/bonfire/: scene.gltf
models/garden/Campsite/flame/: scene.gltf
models/garden/Campsite/log/: scene.gltf
models/garden/Misc/bridge/: scene.gltf
models/garden/Misc/circular/: scene.gltf
models/garden/Misc/gandalf/: scene.gltf
models/garden/Misc/gazebo/: scene.gltf
models/garden/Misc/lamp/: scene.gltf
models/garden/Misc/path/: scene.gltf
models/garden/Misc/sword/: scene.gltf
models/garden/Plants/Trees/1/: scene.gltf
models/garden/Plants/Trees/sakura/: scene.gltf
models/garden/Plants/grass/: scene.gltf
models/garden/Terrain/boulders/: scene.gltf
models/garden/Terrain/cliff/: scene.gltf
models/garden/Terrain/cliff2/: scene.gltf
models/garden/Terrain/floating/: scene.gltf
models/garden/Terrain/mountain/: scene.gltf  scene2.gltf
models/garden/Terrain/pond/: scene.gltf  scene2.gltf
models/garden/Terrain/range/: scene.gltf
models/garden/Terrain/river/: bank.gltf
models/garden/Terrain/river/backup/: scene.gltf
models/garden/Textures/: grass_baseColor.tga
shaders_source/: light_perspective.vert  lighting.frag  texture_perspective.vert
src/: AssimpImport.cpp  Mesh.cpp  SceneObject.cpp  ShaderProgram.cpp  StbImage.cpp  main.cpp
